Adding endpoint /record/{id}
